feat: add profile image preview

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/calendarUI.js": "/js/calendarUI.js",
     "/js/blog/blog.js": "/js/blog/blog.js",
+    "/js/settings/settings.js": "/js/settings/settings.js",
     "/css/app.css": "/css/app.css",
     "/css/calendarUI.css": "/css/calendarUI.css"
 }
